--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -5,6 +5,21 @@ service: serverless-todo-app
 plugins:
   - serverless-webpack
   - serverless-iam-roles-per-function
+  - serverless-reqvalidator-plugin
+  - serverless-aws-documentation
+
+custom: 
+ documentation:
+  api:
+   info:
+     version: v1.0.0
+     title:  serverless-reqvalidator-plugin 
+     description: app
+  models:
+    - name: UserRequest 
+      contentType: application/json
+      schema:  ${file(src/models/create-todo-model.json)} # relative to where the serverless.yaml is
+   
 
 provider:
   name: aws
@@ -65,6 +80,9 @@ functions:
           path: todos
           cors: true
           auth: Auth
+          request:
+           schema:
+             application/json: ${file(src/models/create-todo-model.json)} # relative to where the serverless.yaml is
     iamRoleStatements:
       - Effect: Allow
         Action:
